WebAPI exposes PUT methods
Replaced POST with PUT.

--- a/Web/Transfer.html
+++ b/Web/Transfer.html
@@ -3,28 +3,12 @@
 <head>
     <title></title>
 </head>
-<!--<body>
-    <form id="TransferForm" method="post" action="api/transfer">
-        <select id="FromAccount">
-            <option>Checking</option>
-            <option>Saving</option>
-        </select>
-        <select id="ToAccount">
-            <option>Saving</option>
-            <option>Checking</option>
-        </select>
-        <label>Amount:</label>
-        <label>Description:</label>
-        <input type="text" id="Description" />
-        <input id="Amount" type="text" />
-        <input id="Submit" type="submit" value="submit" />
-    </form>
-</body>-->
 <script src="Scripts/jquery-1.8.1.js"></script>
+<script src="Scripts/jquery.validate.js"></script>
 <script src="Scripts/Transfer.js"></script>
 <body>
     <div id="message"></div>
-    <form id="form1" > 
+    <form id="form1"  > 
     <div> 
         <label for="FromAccountId">From Account</label> 
     </div> 
@@ -49,10 +33,10 @@
 
     </div>   
     <div>
-        <input type="text" name="Amount" />
+        <input type="text" name="Amount" class="required" />
     </div>
     <div> 
-        <input type="submit" value="Submit" /> 
+        <input type="submit" value="Submit" class="submit" /> 
     </div> 
 </form>
     </body>
