added demo to jsrender; db changes

--- a/Web/JsRenderDemo.html
+++ b/Web/JsRenderDemo.html
@@ -10,7 +10,7 @@
 		{{:#index+1}}: <b>{{>name}}</b> ({{>releaseYear}})
 	</div>
 </script>
-
+Demo
 <div id="movieList"></div>
 
 <script type="text/javascript">
